@@ -47,6 +47,7 @@ Version 0.3.beta1
 - Improved: All product collections can be printed to HTML/PDF
 - Improved: Addresses are now linked to the store config ID
 - Improved: Drag & Drop of product sorting in categories
+- Improved: Additional CSS classes for product list (Ticket #432)
 - Fixed start & stop publishing dates not working
 - Fixed Authorize.net failed transaction bug
 - Fixed enter key trapping on checkout payment method
